--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,5 +60,13 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "resolveJsonModule": true
-  }
+  },
+  "typeRoots": [
+    "./node_modules/@types"
+  ],
+  "types": [
+    "node",
+    "mocha",
+    "chai"         
+  ]
 }
