--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^6.0.3",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
+    "relcov": "^1.0.6",
     "rollup": "^1.26.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-license": "^0.12.1",
@@ -30,8 +31,8 @@
     "build": "node ./scripts/i18n-all.js && npx rollup -c",
     "lint": "npx tslint -c tslint.json \"src/**/*.ts\"",
     "lint-fix": "npx tslint -c tslint.json \"src/**/*.ts\" --fix",
-    "test": "npx mocha",
-    "coverage": "npx nyc npm run test"
+    "test": "npx nyc npx mocha",
+    "coverage": "mkdir coverage \n npm run test && npx nyc report --reporter=text-lcov | npx relcov > coverage/lcov.info"
   },
   "author": "Marco Ricupero <marco.ricupero@gmail.com>",
   "license": "MIT"
