nyc & sonar config, test coverage

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,16 +1,14 @@
 {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "all": true,
-    "check-coverage": true,
     "include": [
         "src/**/*.ts"
     ],
     "exclude": [
-        "**/*.js",
-        "**/*.test.*"
+        "**/*.js"
     ],
     "reporter": [
+        "lcovonly",
         "text",
-        "lcovonly"
+        "text-summary"
     ]
 }
