--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.sources=./src
 sonar.projectName=diacritic-remover
 sonar.projectDescription=TS library to handle and replace diacritics
 sonar.tests=test
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
