--- a/package.json
+++ b/package.json
@@ -5,6 +5,20 @@
   "main": "dist/diacritic-remover.js",
   "module": "dist/diacritic-remover.es.js",
   "browser": "dist/diacritic-remover.bundle.js",
+  "bugs": {
+    "url": "https://github.com/Marketto/diacritic-remover/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Marketto/diacritic-remover.git"
+  },
+  "keywords": [
+    "diacritic",
+    "remover",
+    "replace",
+    "accent",
+    "typescript"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
