--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,15 @@
-examples
-test
-sonar-project.properties
+.github
 .nyc_output
+.scannerwork
+.sonarlint
 .vscode
 coverage
+i18n
+demo
 docs
 scripts
+test
+.nycrc.json
 CODE_OF_CONDUCT.md
-demo
-.github
-i18n/*.json
+jsdoc.json
+sonar-project.properties
