--- a/package.json
+++ b/package.json
@@ -37,14 +37,13 @@
     "rollup-plugin-license": "^0.12.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-terser": "^5.1.3",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "i18n": "node ./scripts/i18n-all.js",
-    "release": "npm audit fix && npm run-script i18n && npm audit fix && npm run-script lint-fix && npm run-script coverage && npm run-script build",
+    "release": "npm audit fix && npm audit fix && npm run-script lint-fix && npm run-script coverage && npm run-script build",
     "build": "npx rimraf ./dist & npx rollup -c",
     "lint": "npx tslint -c tslint.json \"src/**/*.ts\"",
     "lint-fix": "npx tslint -c tslint.json \"src/**/*.ts\" --fix",
