--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "inlineSourceMap": true
   },
   "typeRoots": [
     "./node_modules/@types"
