--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "inlineSourceMap": true
+    "resolveJsonModule": true
   },
   "typeRoots": [
     "./node_modules/@types"
