--- a/demo/express/package.json
+++ b/demo/express/package.json
@@ -1,15 +1,16 @@
 {
   "name": "diacritic-remover-express-demo",
-  "version": "1.0.0",
   "description": "DiacriticRemover Node/Express Demo",
+  "version": "1.0.0",
+  "author": "Marco Ricupero <marco.ricupero@gmail.com>",
+  "license": "MIT",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Marco Ricupero <marco.ricupero@gmail.com>",
-  "license": "MIT",
   "dependencies": {
-    "@marketto/diacritic-remover": "^1.0.5",
+    "@marketto/diacritic-remover": "latest",
     "express": "^4.17.1"
   }
 }
