--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -1,11 +1,12 @@
 {
   "name": "diacritic-remover-react-demo",
-  "version": "0.1.0",
-  "private": true,
+  "description": "DiacriticRemover React Demo",
+  "version": "1.0.0",
   "author": "Marco Ricupero <marco.ricupero@gmail.com>",
   "license": "MIT",
+  "private": true,
   "dependencies": {
-    "@marketto/diacritic-remover": "^1.0.5",
+    "@marketto/diacritic-remover": "latest",
     "@material-ui/core": "^4.7.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
