--- a/demo/svelte/package.json
+++ b/demo/svelte/package.json
@@ -7,8 +7,8 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "rollup -c -w",
+    "serve": "sirv public"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
