--- a/package.json
+++ b/package.json
@@ -22,34 +22,34 @@
   "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@rollup/plugin-json": "^4.0.0",
-    "@types/chai": "^4.2.5",
+    "@rollup/plugin-json": "^4.0.3",
+    "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.7",
-    "@wessberg/rollup-plugin-ts": "^1.1.83",
+    "@types/node": "^12.12.37",
+    "@wessberg/rollup-plugin-ts": "^1.2.24",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
     "mocha": "^7.1.2",
     "nyc": "^14.1.1",
     "relcov": "^1.0.6",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.26.3",
+    "rimraf": "^3.0.2",
+    "rollup": "^1.32.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-license": "^2.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.3",
-    "ts-node": "^8.4.1",
+    "rollup-plugin-terser": "^5.3.0",
+    "ts-node": "^8.9.1",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.8.3"
   },
   "scripts": {
-    "release": "npm audit fix && npm audit fix && npm run-script lint-fix && npm run-script coverage && npm run-script build",
+    "release": "npm audit fix && npm run lint-fix && npm run coverage && npm run build",
     "build": "npx rimraf ./dist & npx rollup -c",
     "lint": "npx tslint -c tslint.json \"src/**/*.ts\"",
     "lint-fix": "npx tslint -c tslint.json \"src/**/*.ts\" --fix",
     "test": "npx nyc npx mocha",
-    "coverage": "mkdir coverage \n npm run-script test && npx nyc report --reporter=text-lcov | npx relcov > coverage/lcov.info"
+    "coverage": "mkdir coverage & npm run test && npx nyc report --reporter=text-lcov | npx relcov > coverage/lcov.info"
   },
   "author": "Marco Ricupero <marco.ricupero@gmail.com>",
   "license": "MIT"
